--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,12 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^6.0.0
   flutter_riverpod: ^2.6.1
+  flutter_secure_storage: ^9.2.4
   fluttertoast: ^9.0.0
   go_router: ^16.2.4
   intl: ^0.20.2
+  jwt_decode: ^0.3.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_lints: ^5.0.0
